# autodownloader

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.openvpn  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  test_app.py
.github/workflows/: ci.yml
src/autodownloader/: database.py  logger.py  main.py  processor.py
src/autodownloader/templates/: index.html
