[project]
name = "autodownloader"
version = "0.1.0a1"
description = "Async video downloader and processor via web UI"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "aiosqlite",
    "jinja2",
    "python-multipart",
    "yt-dlp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autodownloader"]

[project.scripts]
autodownloader = "autodownloader.main:main"
